-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0 Beta 1
-
Windows 7, 64bit, msvc2010
-
dff58b47a786a84dc5145a73171be2c3db688fe1,e70e9f823998bcb9c06f540d72a5a0371a72330d
In Qt4.8 the example is contained within the embedding QAxWidget. The example is using QGLWidget.
- is required for
-
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-
- Closed
-
For Gerrit Dashboard: QTBUG-26438 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
30296,1 | Fix embedding ActiveQt servers based on native widgets like QGLWidget | master | qt/qtactiveqt | Status: MERGED | +2 | 0 |
30313,1 | Fix positioning when embedding native widgets such as QGLWidget | master | qt/qtbase | Status: MERGED | +2 | 0 |